# flirtyfever-backend

./: .env_example  .gitignore  README.md  database.py  main.py  pyproject.toml  settings.py
data/: FlirtyFever-DB.sql
docs/: pull_request_template.md
dto/: user.py
flirtyfever_backend/: database.py  exceptions.py  main.py  settings.py
flirtyfever_backend/models/: action.py  action_type.py  gender.py  profile.py  role.py  user.py
flirtyfever_backend/routers/: user.py
flirtyfever_backend/services/: user.py
models/: user.py
routers/: user.py
services/: user.py
src/: database.py  exceptions.py  main.py  settings.py
src/models/: action.py  action_type.py  city.py  gender.py  role.py  user.py  user_images.py
src/routers/: user.py
src/services/: user.py
tests/: test_user.py
